--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
-<title>소트 이름을 적어 주세요</title>
+<title>에이트리 구장 소트</title> 
 <script type="text/javascript">
 <!--
 //*********************************************************
