Update and rename 에이트리 구장 소트 이미지 없고 건든 버전 (성공).html to index.html
Signed-off-by: lets18trip <angelinah020404@gmail.com>

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ var namMember = new Array(
 "<img src=> <br>도메키 쿠구리</br>",
 "<img src=> <br>하치노야 나기</br>",
 "<img src=> <br>시라미츠 토이</br>",
-"<img src=> <br>시라미츠 류이</br>","<img src=> <br>나츠메 요다카</br>",
+"<img src=> <br>시라미츠 류이</br>",
+"<img src=> <br>나츠메 요다카</br>",
 "<img src=> <br>요와 네타로</br>",
 
 
