--- a/index1.html
+++ b/index1.html
@@ -34,7 +34,8 @@ var namMember = new Array(
 "<img src=> <span style="color: #;"><br>도메키 쿠구리</br>",
 "<img src=> <span style="color: #;"><br>하치노야 나기</br>",
 "<img src=> <span style="color: #;"><br>시라미츠 토이</br>",
-"<img src=> <span style="color: #;"><br>시라미츠 류이</br>","<img src=> <span style="color: #;"><br>나츠메 요다카</br>",
+"<img src=> <span style="color: #;"><br>시라미츠 류이</br>",
+"<img src=> <span style="color: #;"><br>나츠메 요다카</br>",
 "<img src=> <span style="color: #;"><br>요와 네타로</br>",
 
 
