--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ var namMember = new Array(
 "<img src=> <span style="color: #dcaa3c;"><br>니시조노 렌가</br></span>",
 "<img src=> <span style="color: #a58cff;"><br>오오구로 카프카</br></span>",
 "<img src=> <span style="color: #C8D7EB;"><br>무라쿠모 텐</br></span>",
-"<img src=> <span style="color: #51b3e6;"><br>카미나 유키카제</br></span>",
+"<img src=> <span style="color: #51B3E6;"><br>카미나 유키카제</br></span>",
 "<img src=> <span style="color: #e83a21;"><br>루 리광</br></span>",
 "<img src=> <span style="color: #;"><br>이소타케 아쿠타</br></span>",
 "<img src=> <span style="color: #;"><br>키누가와 키로쿠</br>",
@@ -286,7 +286,7 @@ return str;
 
 **********************************************************/
 #mainTable{
-font-size: 30px;
+font-size: 20px;
 font-family: '돋움',sans-serif;
 text-align: center;
 vertical-align: middle;
@@ -297,13 +297,13 @@ border-collapse: separate;
 border-spacing: 10px 5px;
 }
 #leftField{
-width: 170px;
-height: 200px;
+width: 150px;
+height: 180px;
 border: 1px solid #000;
 }
 #rightField{
-width: 170px;
-height: 200px;
+width: 150px;
+height: 180px;
 border: 1px solid #000;
 }
 //-->
