--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ var namMember = new Array(
 "<img src=> <br>도메키 쿠구리</br>",
 "<img src=> <br>하치노야 나기</br>",
 "<img src=> <br>시라미츠 토이</br>",
-"<img src=> <br>시라미츠 류이</br>","<img src=> <br>나츠메 요다카</br>",
+"<img src=> <br>시라미츠 류이</br>",
+"<img src=> <br>나츠메 요다카</br>",
 "<img src=> <br>요와 네타로</br>",
 
 
@@ -285,7 +286,7 @@ return str;
 
 **********************************************************/
 #mainTable{
-font-size: 15px;
+font-size: 25px;
 font-family: '돋움',sans-serif;
 text-align: center;
 vertical-align: middle;
