--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
 //*********************************************************
 var namMember = new Array(
 
-"<img src=> <br>니시조노 렌가</br>",
-"<img src=> <br>오오구로 카프카</br>",
-"<img src=> <br>무라쿠모 텐</br>",
-"<img src=> <br>카미나 유키카제</br>",
-"<img src=> <br>루 리광</br>",
-"<img src=> <br>이소타케 아쿠타</br>",
-"<img src=> <br>키누가와 키로쿠</br>",
-"<img src=> <br>나나메기 나나키</br>",
-"<img src=> <br>카구야 무네우지</br>",
-"<img src=> <br>쿠라마 우시오</br>",
-"<img src=> <br>키타카타 라이토</br>",
-"<img src=> <br>아제카와 키나리</br>",
-"<img src=> <br>나츠야키 치히로</br>",
-"<img src=> <br>키노우치 타오</br>",
-"<img src=> <br>도메키 쿠구리</br>",
-"<img src=> <br>하치노야 나기</br>",
-"<img src=> <br>시라미츠 토이</br>",
-"<img src=> <br>시라미츠 류이</br>",
-"<img src=> <br>나츠메 요다카</br>",
-"<img src=> <br>요와 네타로</br>",
+"<br>니시조노 렌가</br>",
+"<br>오오구로 카프카</br>",
+"<br>무라쿠모 텐</br>",
+"<br>카미나 유키카제</br>",
+"<br>루 리광</br>",
+"<br>이소타케 아쿠타</br>",
+"<br>키누가와 키로쿠</br>",
+"<br>나나메기 나나키</br>",
+"<br>카구야 무네우지</br>",
+"<br>쿠라마 우시오</br>",
+"<br>키타카타 라이토</br>",
+"<br>아제카와 키나리</br>",
+"<br>나츠야키 치히로</br>",
+"<br>키노우치 타오</br>",
+"<br>도메키 쿠구리</br>",
+"<br>하치노야 나기</br>",
+"<br>시라미츠 토이</br>",
+"<br>시라미츠 류이</br>",
+"<br>나츠메 요다카</br>",
+"<br>요와 네타로</br>"
 
 
 );
